fixed some form css, no longer stretching inputs

--- a/MedicalApp/static/styles.css
+++ b/MedicalApp/static/styles.css
@@ -130,7 +130,7 @@ form {
     grid-template-rows: repeat(5, 1fr);
 }
 
-form button {
+form button, input[type="submit"] {
     grid-column: 1/3;
 }
 
@@ -148,9 +148,8 @@ input[type="submit"]:hover {
 }
 
 input[type="text"], input[type="password"], input[type="email"] {
-    width: 100%;
     padding: 8px;
-    margin: 5px 0 22px 0;
+    margin: 5px 0 5px 0;
     display: inline-block;
     border: none;
     background: #f1f1f1;
@@ -211,4 +210,19 @@ main
     border: 2px solid black;
     text-align: center;
     align-self: center;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 100px auto;
+    gap: 5px;
+    align-content: center;
+    justify-content: start;
+    align-items: center;
+    justify-items: stretch;
+}
+
+button
+{
+    grid-column: 1/3; 
 }
